Make click targets inside links work.

There are pages that attach click handlers to elements that are found inside links, and screen readers might try to click such elements. Our existing doDefaultAction logic wasn't handling this possibility.
For example, there might be a graphic inside a link and the screen reader might invoke the default action on the graphic.
BUG=615904
TBR=dmazzoni@chromium.org

Review-Url: https://codereview.chromium.org/2043433002
Cr-Commit-Position: refs/heads/master@{#397882}

Former-commit-id: b474d37feaa57c430c28477b5aab38f65ff4d9c0